--- a/前端学习/☁小程序/开始/04宿主环境/03组件.md
+++ b/前端学习/☁小程序/开始/04宿主环境/03组件.md
@@ -6,9 +6,13 @@
 
 普通视图区域，类似于 div，是一个块级元素。
 
+---
+
 `scroll-view`
 
 可滚动的视图区域
+
+---
 
 `swiper(容器) & swiper-item(item)`
 
@@ -16,15 +20,45 @@
 
 ## 基础内容
 
+`text`
+
+属性
+
+- `user-select`：是否可以长按选中文本
+
+---
+
 
 ## 表单组件
 
+`button`
+
+功能比 HTML 中的 button 按钮丰富
+
+通过 `open-type` 属性可以调用微信提供的各种功能（客服/转发/获取用户授权/获取用户信息）
 
 ## 导航组件
 
 
 ## 媒体组件
 
+`image`
+
+image 组件默认看宽度约 300 px，高度约 240 px
+
+属性
+
+- `mode`
+
+| 值          | 说明                             |
+| ----------- | -------------------------------- |
+| scaleToFill | 拉伸以填充                       |
+| aspectFit   | 长边能显示出（画面留有空白）     |
+| aspectFill  | 保证短边能显示出来（画面被裁剪） |
+| widthFix    | 宽度不变，高度自适应             |
+| heightFix   | 高度不变，宽度自适应             |
+
+---
 
 ## map 地图组件
 
