--- a/前端学习/🔮设计模式/00设计模式原则/00设计模式原则.md
+++ b/前端学习/🔮设计模式/00设计模式原则/00设计模式原则.md
@@ -17,3 +17,8 @@ I [[05-I接口隔离原则|接口隔离原则]]
 D [[06-D依赖倒转原则|依赖倒转原则]]
 
 C [[07-C组合聚合复用原则|组合/聚合复用原则]]
+
+
+## 参考文章
+
+[JavaScript设计模式es6（23种)](https://juejin.cn/post/6844904032826294286)
