--- a/前端学习/☁小程序/组件/基本使用.md
+++ b/前端学习/☁小程序/组件/基本使用.md
@@ -2,7 +2,15 @@
 
 创建组件
 
+类似于页面，一个自定义组件由 `json` `wxml` `wxss` `js` 4个文件组成。要编写一个自定义组件，首先需要在 `json` 文件中进行自定义组件声明（将 `component` 字段设为 `true` 可将这一组文件设为自定义组件）：
+
 ![[../img/Pasted image 20220826172955.png]]
+
+```json
+{
+  "component": true
+}
+```
 
 注册组件
 
@@ -46,5 +54,3 @@ app
 	<Header></Header>
 </view>
 ```
-
-
