--- a/前端学习/⚡框架/vue/源码/02响应式原理.md
+++ b/前端学习/⚡框架/vue/源码/02响应式原理.md
@@ -6,7 +6,7 @@
 
 使用ES5语法
 
-![[../../../😄三件套+/ES_TS/ES5/defineProperty|defineProperty]]
+![[../../../../😄三件套+/ES_TS/ES5/defineProperty|defineProperty]]
 
 要做到响应式只需要在enumberable、set、get上做文章
 
