--- a/前端学习/⚡框架/vue/源码/03代理.md
+++ b/前端学习/⚡框架/vue/源码/03代理.md
@@ -15,7 +15,7 @@
 |  key   | 用于访问_data和app上相对应的某一个属性          |
 
 图示
-![[../../../../Excalidraw/Drawing 2022-05-17 12.46.59.excalidraw]]
+![[../../../../../Excalidraw/Drawing 2022-05-17 12.46.59.excalidraw]]
 
 ```js
 function proxy(target, prop, key){
