--- a/前端学习/😄三件套+/ES_TS/TypeScript/00类型/extends/条件类型与高级类型.md
+++ b/前端学习/😄三件套+/ES_TS/TypeScript/00类型/extends/条件类型与高级类型.md
@@ -93,10 +93,10 @@ type resultB<never> = T extends "x" ? string : number; // never
 
 `[]`
 
-使用 `[]` 将泛型参数括起来，便可以阻断条件判断中分配
+使用 `[]` 将泛型参数括起来(同时相比较的类型也需要`[]`包裹)，便可以阻断条件判断中分配
 
 ```ts
-type P<T> = [T] extends otherType ? true : false;
+type P<T> = [T] extends [otherType] ? true : false;
 ```
 
 ### 高级类型中的应用
